[tool.poetry]
name = "asana-pyexport"
version = "0.1.0"
description = "Export Asana projects"
authors = ["amelie <amelie.rolland.1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "18.6b"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
